--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,9 @@
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
   </script>
-  <!-- This script adds the flutter initialization JS code -->
+
+  <script src="env.js"></script>
+
   <script src="flutter.js" defer></script>
 </head>
 <body>
